# DrivingWrittenTest-C

./: README.md  client  client.c  main.cpp  note.txt  question.json  questions.txt  result.json  room.json  server  server.c  server~8ed34dc (add login, signup screen)  student.json
DrivingWrittenTest/: CMakeLists.txt  DrivingWrittenTest_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
DrivingWrittenTest/Auth/: auth.cpp  auth.h  auth.ui
DrivingWrittenTest/CreateRoomForm/: createroom.cpp  createroom.h  createroom.ui
DrivingWrittenTest/Entity/History/: history.cpp  history.h
DrivingWrittenTest/Entity/Question/: question.cpp  question.h
DrivingWrittenTest/Entity/Room/: roomentity.cpp  roomentity.h
DrivingWrittenTest/Entity/User/: user.cpp  user.h
DrivingWrittenTest/Exam/: exam.cpp  exam.h  exam.ui
DrivingWrittenTest/Online/: onlinewindow.cpp  onlinewindow.h  onlinewindow.ui
DrivingWrittenTest/Practice/: practice.cpp  practice.h  practice.ui
DrivingWrittenTest/Question/: questionframe.cpp  questionframe.h  questionframe.ui
DrivingWrittenTest/Room/: room.cpp  room.h  room.ui
DrivingWrittenTest/RoomResult/: roomresult.cpp  roomresult.h  roomresult.ui
DrivingWrittenTest/Utils/: utils.cpp  utils.h
DrivingWrittenTest/WaitingScreen/: waiting.cpp  waiting.h  waiting.ui
DrivingWrittenTest/connect/: connect.cpp  connect.h
DrivingWrittenTest/db/: easy.json  hard.json  history.txt  medium.json
DrivingWrittenTest/session/: session.cpp  session.h
server/: client  client.c  result.json  room.json  script.txt  server  server.c  student.json
